--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Aplicacion de linea de comandos para multiplicar",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,5 +19,8 @@
   "homepage": "https://github.com/mauriyapura/node-03-bases#readme",
   "devDependencies": {
     "nodemon": "^2.0.7"
+  },
+  "dependencies": {
+    "yargs": "^16.2.0"
   }
 }
