--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "03-bases",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Aplicacion de linea de comandos para multiplicar",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index",
+    "dev": "npx nodemon index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
